# SFML-3D-Cube-Demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  QUICKSTART.md  README.md  build.bat
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
